--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 Be allowed to use any item in any room, but if the item can't be used say " you can't use that here" or "That has no affect here". in rooms where no items can be used, just say "That has no affect here"
 
 have the chest emit an errie glow. glow disappears once you remove the sword.
+
+need a torch to see room4?
